--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,9 @@
 }
 
 nav {
-        background: url(images/older.JPG) no-repeat center center fixed;
-   background-size: cover;  
-  /* background-color: #A0522D */
+         background: url(images/older.JPG) no-repeat center center fixed;
+   background-size: cover;   
+   /* background-color: turquoise */
 }
 
 #opening {
@@ -66,4 +66,8 @@ padding-top: 5%;
 
 h1 {
     text-align: center;
+}
+
+footer {
+   background-color: turquoise !important;
 }
